# pedra-papel-tesoura

./: .flake8  .gitignore  CONTRIBUTING.md  LEARNING_GUIDE.md  LICENSE  Makefile  README.md  REORGANIZACAO_ESTRUTURA.md  SINCRONIZAR_GITHUB.md  VALIDACAO_DADOS_PESSOAIS.md  __init__.py  jogo_pedra_papel_tesoura.py  pyproject.toml  quality-check.sh
.github/workflows/: python-app.yml
Gerenciador de Tarefas/: .gitignore_template  ANALISE_DETALHADA.md  ANALISE_MELHORIAS.md  CHECKLIST_GITHUB.md  COMECO_RAPIDO.md  COMPARACAO_DETALHADA.md  GUIA_ESTUDO.md  INDEX.md  PREPARACAO_ENTREVISTA.md  README.md  README_GITHUB.md  RESUMO_EXECUTIVO.md  REVIEW_GITHUB.md  ROADMAP_2025.md  ROADMAP_EVOLUCAO.md  app_tarefas.py  app_tarefas_completo.py  app_tarefas_github.py  app_tarefas_refatorado.py  setup_github.sh  teste_app.py  teste_completo.py  teste_refatorado.py
tests/: __init__.py  test_game.py
